--- a/Level 2 Task 1/index.html
+++ b/Level 2 Task 1/index.html
@@ -279,7 +279,7 @@
             </div>
             <div class="col-md-7">
               <div class="contact-form">
-                <form name="contact" method="post" data-netlify="true">
+                <form name="contact" method="post">
                   <div class="row">
                     <div class="col-lg-6 mb-4">
                       <input type="text" placeholder="name" class="form-control from-control-lg fs-6 border-0 shadow-sm">
